# ds-projects

./: README.md  kaggle-data-download.ipynb
predict-fifa26-wc/: main.py  notebook.py  pyproject.toml
wsl-analysis/: .gitignore  README.md  RQ-bigfour.py  notebook.ipynb  notebook.py  pyproject.toml  team_stadium_locations.csv  team_stadiums.csv  team_stadiums.txt  test.ipynb
wsl-analysis/__marimo__/session/: notebook.py.json
wsl-analysis/data/: team_stadiums.csv  wsl-2023-UTC.csv  wsl-2024-UTC.csv  wsl_data.csv
wsl-analysis/haystack_ai/: agent.py  tools.py
wsl-analysis/layouts/: notebook.slides.json
