[project]
name = "wsl-research-analysis"
version = "0.1.0"
description = "Exploring data regarding the Women's Super League (WSL)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "marimo>=0.23.3",
    "matplotlib>=3.10.9",
    "plotly[express]>=6.7.0",
    "polars>=1.39.3",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
]
